--- a/templates/ModularSettings.html
+++ b/templates/ModularSettings.html
@@ -1,5 +1,8 @@
 {{#*inline "settingPartial"}}
 <div class="form-group">
+    {{#if this.isCustom}}
+    {{> (lookup this "customPartial") this}}
+    {{else}}
     <label>{{this.name}}</label>
     <div class="form-fields">
 
@@ -30,6 +33,7 @@
     </div>
 
     <p class="notes">{{this.hint}}</p>
+    {{/if}}
 </div>
 {{/inline}}
 
@@ -47,9 +51,9 @@
 
     <!-- Navigation Tabs -->
     <nav class="sheet-tabs tabs" data-group="sections">
-        {{#each data.tabs as |data tab|}} 
+        {{#each data.tabs as |data tab|}}
           <a class="item" data-tab="{{tab}}"><i class="{{data.faIcon}}"></i> {{localize data.tabLabel}} </a>
-        {{/each}} 
+        {{/each}}
     </nav>
 
     <!-- Main Content Section -->
@@ -59,7 +63,7 @@
             <div class="tab-hint">{{ localize data.hint }}</div>
             <div class="settings-list">
               {{#each data.settings}}
-                {{> settingPartial}} 
+                {{> settingPartial}}
               {{/each}}
               {{#each data.menus}}
                 {{> menuPartial}}
